<resources>
    <string name="app_name">WIMSA</string>
    <string name="wimsa">Service Assist</string>
    <string name="login">LOGIN</string>
    <string name="new_User">NEW USER</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="forgotPassword">FORGOT USERNAME OR PASSWORD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">REGISTER</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_note">Enter email to reset password</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="log_out">Logout</string>
    <string name="serial_number">Serial Number</string>
    <string name="model_number">Model Number</string>
    <string name="tag">Tag</string>
    <string name="location">Location</string>
    <string name="instruct">Enter the following criteria.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
